# copy-trade-engine-solana

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  SESSION_REPORT.md  build.sh  config.toml  test_raydium_api.json  wallets-blacklist.txt  wallets-quality.txt
dashboard/: app.py
data/: seed_wallets_sol.txt
discovery/: __init__.py  db.py  dex_screener.py  early_buyer.py  requirements.txt  run_discovery.py  seed_wallets.txt
gmgn/: engine.py  mass_discovery.py  monitor.py  paper_engine.py  run_engine.py  telegram_bot.py  test_paper_engine.py
hermes/goals/: sentinel-goal-consolidated.md  sentinel-goal-decoder-fix.md  sentinel-goal-followup.md  sentinel-goal-followup2.md  sentinel-goal-followup3.md  sentinel-goal-followup4.md  sentinel-goal-mentions-fix.md  sentinel-goal-warp-tunnel.md  sentinel-goal.md
hermes/skills/: rust-windows-build.md  solana-bot-development.md
paper/: __init__.py  account.py  gmgn_source.py  runtime.py  strategy.py  telegram_bot.py  test_strategy.py
scorer/: __init__.py  db.py  pnl_parser.py  run_scorer.py
scorer/tests/: test_pnl_parser.py
scripts/: check-helius.py  gen-warp-config.py  start-warp-helius.ps1
src/: config.rs  executor.rs  filter.rs  ingest.rs  lagfill.rs  main.rs  position_mgr.rs  risk.rs
tests/: cross_check_txns.py  find_pumpswap_tx.py  spotcheck_lagfill.py  test_helius_ws.py  test_resolve.rs  tx_pumpfun.json  tx_pumpfun2.json  tx_pumpfun_raw.json  tx_pumpswap.json  tx_pumpswap_swap.json
