[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
description = "Solana smart-money copy-trading engine — Rust hot path"

[dependencies]
tokio = { version = "1", features = ["full"] }
solana-sdk = "2"
solana-client = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bs58 = "0.5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
dotenvy = "0.15"
futures-util = "0.3"
tokio-tungstenite = { version = "0.30", default-features = false, features = ["connect", "native-tls"] }
url = "2.5.8"

[profile.release]
opt-level = 3
lto = true
